Fix mobile sub-nav spacing to match main nav item gaps

--- a/assets/scss/partials/_nav.scss
+++ b/assets/scss/partials/_nav.scss
@@ -97,6 +97,10 @@
   text-align: right;
 
   // Mobile: show inline below blog, same styles as main list
+  @media screen and (max-width: $medium - 1) {
+    margin-top: 3em;
+  }
+
   li {
     margin-bottom: 3em;
     line-height: 1.5em;
